raffia/tests/error/scss/at-rule/forward/as-invalid.snap
---
source: raffia/tests/error.rs
---
error: expect token `<ident>`, but found `<number>`
  ┌─ as-invalid.scss:1:17
  │
1 │ @forward "a" as 1-*;
  │                 ^


